--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="./favicon.ico">
-  <title>Vite App Template Repository</title>
+  <title>Football WebSite</title>
 </head>
 
 <body>
